# GptForChess

./: .gitignore  CLAUDE.md  README.md  analysis.ipynb  demo.py  deployment.md  mcts.py  model.py  pyproject.toml  tokenizer.py  train.py
experiments/experiment_1/: analysis.md
experiments/experiment_2/: analysis.md
experiments/experiment_3/: analysis.md
experiments/experiment_4/: analysis.md
experiments/experiment_5/: analysis.md
experiments/experiment_6/: analysis.md
model/: policy_model.pt  reward_model.pt  tokenizer.pt
src/: benchmark.py  build_datasets.py  mcts.py  model.py  tokenizer.py  train.py
tests/: test_build_datasets.py  test_mcts.py  test_minimax.py  test_model.py  test_tokenizer.py  test_train.py
