[project]
name = "gptforchess"
version = "0.1.0"
description = "General Purpose Transformer trained on chess games upwards of 1500 ELO. Additional configuration will be maintained for fine-tuning model to fit particular player play-styles"
authors = [
    {name = "Roshan Bellary",email = "roshan.bellary@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "torch (>=2.0.0)",
    "python-chess (>=1.10.0)",
    "datasets (>=3.0.0)",
    "tensorboard (>=2.14.0)",
    "matplotlib (>=3.8.0)",
    "vastai (>=1.0.3,<2.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "tqdm (>=4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

